css/main.css
@import url(font-awesome.min.css);
@import url('https://fonts.googleapis.com/css?family=Josefin+Sans:300,700&display=swap');
@font-face {
    font-family: 'chunkfiveroman';
    src: url('fonts/chunkfive-webfont.woff2') format('woff2'),
         url('fonts/chunkfive-webfont.woff') format('woff');
    font-weight: normal;
    font-style: normal;

}
body { font-family: 'Josefin Sans', sans-serif; color: #1A1B1F; font-size: 40px; font-weight: 300; line-height: 60px }
h1, h4 { font-family: chunkfiveroman; }
h1 { font-size: 55px }
h4 { font-size: 45px }
select { width: 100%; padding: 35px; background: #4f5620; color: white; }
footer { padding: 20px; margin-top: 50px; }
.hidden { display: none; }
.txtcenter { text-align: center; }
.darkgreen { color: #4f5620 }
.white { color: white; }
.bg-lightgray { background-color: #ddd; }
.bg-white { background-color: #fff; }
.bg-darkgreen { background: #4f5620; }
.container { width: 100%; max-width: 1140px; margin-right: auto; margin-left: auto; padding: 0; }
.intro-header {
    display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex;
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
    -webkit-box-align: center;
    -webkit-align-items: center;
    -ms-flex-align: center;
    align-items: center;
    background: #f4f4f4 url(../images/bg-header.jpg) 0px 0px;
    background-size: cover;
    color: #fff;
    height: 670px;
    margin-bottom: 30px;
    background-position-x: right;
}
.intro-content { width: 100%; margin: 0px; text-align: center; padding-right: 160px;}
.heading-logo { margin: 0 auto; }
.intro-text { width: 80%; margin: 0 auto 35px; }
.intro-text h1 { margin: 10px 0; font-size: 70px; line-height: 100px; }
.feature { border: #e3e3e3 1px solid; padding: 2em 2em 0.1em 2em;}
.hidemobile { display: none; }
.stores { height: auto; }

@media (min-width: 990px) {
	body { font-size: 16px; line-height: 28px }
	h1 { font-size: 36px }
	h4 { font-size: 20px }
	select { padding: 10px; }
	.intro-header { height: 440px; }
	.intro-content { width: 50%; padding-right: 0; }
	.intro-text h1 { font-size: 40px; line-height: 80px; }
	.hidemobile { display: block; }
	.stores { overflow-y: scroll; height:400px;  }
}
/*
	Typify by TEMPLATED
	templated.co @templatedco
	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)



/* Reset 
	html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video 
		{ margin: 0; padding: 0; border: 0; font-size: 100%; font: inherit; vertical-align: baseline; }
	article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section 
		{ display: block; }
	body 
		{ line-height: 1; -webkit-text-size-adjust: none; }
	ol, ul 
		{ list-style: none; }
	blockquote, q 
		{ quotes: none; }
	blockquote:before, blockquote:after, q:before, q:after 
		{ content: ''; content: none; }
	table 
		{ border-collapse: collapse; border-spacing: 0; }

/* Box Model 
	*, *:before, *:after 
		{ -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }

/* Containers 
	.container 
		{ margin-left: auto; margin-right: auto; }
	.container.\31 25\25 
		{ width: 100%; max-width: 100em; min-width: 80em; }
	.container.\37 5\25 
		{ width: 60em; }
	.container.\35 0\25 
		{ width: 40em; }

	.container.\32 5\25 {
		width: 20em;
	}

	.container {
		width: 80em;
	}

	@media screen and (max-width: 1680px) {

		.container.\31 25\25 {
			width: 100%;
			max-width: 100em;
			min-width: 80em;
		}

		.container.\37 5\25 {
			width: 60em;
		}

		.container.\35 0\25 {
			width: 40em;
		}

		.container.\32 5\25 {
			width: 20em;
		}

		.container {
			width: 80em;
		}

	}

	@media screen and (max-width: 1280px) {

		.container.\31 25\25 {
			width: 100%;
			max-width: 81.25em;
			min-width: 65em;
		}

		.container.\37 5\25 {
			width: 48.75em;
		}

		.container.\35 0\25 {
			width: 32.5em;
		}

		.container.\32 5\25 {
			width: 16.25em;
		}

		.container {
			width: 65em;
		}

	}

	@media screen and (max-width: 980px) {

		.container.\31 25\25 {
			width: 100%;
			max-width: 112.5%;
			min-width: 90%;
		}

		.container.\37 5\25 {
			width: 67.5%;
		}

		.container.\35 0\25 {
			width: 45%;
		}

		.container.\32 5\25 {
			width: 22.5%;
		}

		.container {
			width: 90%;
		}

	}

	@media screen and (max-width: 736px) {

		.container.\31 25\25 {
			width: 100%;
			max-width: 112.5%;
			min-width: 90%;
		}

		.container.\37 5\25 {
			width: 67.5%;
		}

		.container.\35 0\25 {
			width: 45%;
		}

		.container.\32 5\25 {
			width: 22.5%;
		}

		.container {
			width: 90%;
		}

	}

	@media screen and (max-width: 480px) {

		.container.\31 25\25 {
			width: 100%;
			max-width: 112.5%;
			min-width: 90%;
		}

		.container.\37 5\25 {
			width: 67.5%;
		}

		.container.\35 0\25 {
			width: 45%;
		}

		.container.\32 5\25 {
			width: 22.5%;
		}

		.container {
			width: 90%;
		}

	}

/* Grid

	.row {
		border-bottom: solid 1px transparent;
		-moz-box-sizing: border-box;
		-webkit-box-sizing: border-box;
		box-sizing: border-box;
	}

	.row > * {
		float: left;
		-moz-box-sizing: border-box;
		-webkit-box-sizing: border-box;
		box-sizing: border-box;
	}

	.row:after, .row:before {
		content: '';
		display: block;
		clear: both;
		height: 0;
	}

	.row.uniform > * > :first-child {
		margin-top: 0;
	}

	.row.uniform > * > :last-child {
		margin-bottom: 0;
	}

	.row.\30 \25 > * {
		padding: 0 0 0 0em;
	}

	.row.\30 \25 {
		margin: 0 0 -1px 0em;
	}
/* ... */

